# tgbabki

./: .gitignore
backend/: bot.py  main.py  pyproject.toml  pyrightconfig.json
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/app/: App.tsx
